--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<hr>
 				<h4>ResuMe</h4>
 				<ul class="actions">
-					<li><a href="file:///C:/Users/Mae/Desktop/resume.pdf" class="button small icon solid fa-download">download</a></li>
+					<li><a href="resume.pdf" class="button small icon solid fa-download">download</a></li>
 			</article>
 
 			<!-- Skills -->
