--- a/index.html
+++ b/index.html
@@ -60,20 +60,20 @@
 					DEVELOPMENT, FULL STACK DEVELOPMENT, & DESIGN.
 				</h3>
 				<div class="row">
-					<div class="column">
+					<div class="column col-sm-6">
 						<img id="mountain-mush" src="images/mountainmush.jpg" alt="marshmellomountain">
 					</div>
-					<div class="column">
+					<div class="column col-sm-6">
 						<img id="la-mush" src="images/la&mush.png" alt="mello&i">
 					</div>
-				</div>
-				<div class="row">
-					<div class="column">
+			
+					<div class="column col-sm-6">
 						<img id="jeep-mush" src="images/mushjeep.jpg" alt="jeepmush">
 					</div>
-					<div class="column">
+					<div class="column col-sm-6">
 						<img id="ocean-mush" src="images/oceanmush.jpg" alt="oceanmush">
 					</div>
+				</div>
 				<hr>
 				<div class="row">
 					<div class="feature-box col-lg-4">
