--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
 	<title>Larissa Miranda</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
-
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -66,7 +65,7 @@
 					<div class="column col-sm-6">
 						<img id="la-mush" src="images/la&mush.png" alt="mello&i">
 					</div>
-			
+
 					<div class="column col-sm-6">
 						<img id="jeep-mush" src="images/mushjeep.jpg" alt="jeepmush">
 					</div>
@@ -79,7 +78,7 @@
 					<div class="feature-box col-lg-4">
 						<img class="image-icon" src="images/design.png" alt="designimg">
 						<h5 class="feature-title">TAILORED TO YOU</h5>
-						<hr>
+
 					</div>
 
 					<div class="feature-box col-lg-4">
@@ -90,14 +89,15 @@
 					<div class="feature-box col-lg-4">
 						<img class="image-icon" id="responsive" src="images/responsive.png" alt="responsiveimg">
 						<h5 class="feature-title">RESPONSIVE</h5>
-						<hr>
+						<br>
 					</div>
+					<hr>
 					<p>
 						Oi eu sou Larissa, como vai você? <br>How do you do? <br> I am a software engineer passionate about developing to better myself and those around me. <br>My designs will work with big and small devices, have fast/ lag free interaction,
 						are built with love, and designed with care. <br>My process includes understanding my client's vision completly through and through, coming up with a prototype mockup, then developing on the clients vision, market research, and design
 						concept. <br> Have ideas? Let's <a href="#contact">chat</a> & make them come to life!
 					</p>
-					<hr>
+					<br>
 					<h6>More about me <a href="#elements">here</a></h6>
 				</div>
 			</article>
@@ -191,7 +191,7 @@
 			<!-- Contact -->
 			<article id="contact">
 				<h2 class="major">GeT iN toucH</h2>
-				<form method="post" action="#">
+				<!-- <form method="post" action="#">
 					<div class="fields">
 						<div class="field half">
 							<label for="name">Name</label>
@@ -205,72 +205,72 @@
 							<label for="message">Message</label>
 							<textarea name="message" id="message" rows="4"></textarea>
 						</div>
-					</div>
-					<ul class="actions">
+					</div> -->
+					<!-- <ul class="actions">
 						<li><a href="mailto:larissabfield@gmail.com" class="button small primary">Send Message</a></li>
 					</ul>
-				</form>
+				</form> -->
 				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/larissa-bottenfield-24b459181/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/larissabott" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto:Larissabfield@gmail.com" class="icon fa-envelope"></a></li>
+					<li><a href="mailto:Larissabfield@gmail.com" class="icon fa-envelope contact-icon"></a></li>
+					<li><a href="https://www.linkedin.com/in/larissa-bottenfield-24b459181/" class="icon brands fa-linkedin contact-icon"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/larissabott" class="icon brands fa-github contact-icon"><span class="label">GitHub</span></a></li>
 				</ul>
 			</article>
 
 			<!-- Elements -->
 			<article id="elements">
 				<h2 class="major">MY jouRNeY</h2>
-				<p>Originally I took the traditional college route. My partner, <a href="https://lnkd.in/gC2hgpk">Colin</a>, and I dogsat and really enjoyed doing so during our studies. During my freetime I enjoyed cooking and making music.
-					Once I was near finishing my general liberal arts classes and it was time for me to declare a major I felt I wasn't any closer to finding a passion I could have a career from- and lets be honest, that wouldn't set me back at least a few
-					grand in debt.
-					After much consideration I decided I needed to take a step back and really discover myself and how I wanted to make my mark. Being native to Brazil and living in the midwest practically all my life I was sick of the cold and figured my life
-					in the warm
-					no longer needed to wait. With this I decided to move to the south and had a plan to attend college there after establishing recidency. Colin, our now 1y-o white german shepherd-wolf, and I roadtripped for a couple months. I grew closer
-					with myself and the
-					world around me and had experiences I wouldn't have had in the college life. One major issue with the south, that was impossible to ignore, was the amount of strays~ it was heartbreakng. Everytime i'd go out there were a few id try to stop
-					and help, many of our days were spent this way. Many were scared due to peoples past behaviour but Colin, our pup, and I did manage to help a few~ taking roadtrips back up north to family member who could give them a good home. While on
-					10hr+ road trips we'd dicover and listen to music, visit national parks, and read space and science articles, like the works of Stephen Hawking, Einstein, Elon Musk and eveything in between. We settled down and traveled around the south for
-					a bit,
-					exploring interests and running a small house and dog sitting buissness. I came to know just how important spending everyday with the ones I love was to me. I also realized not everyone needs to take the college route, with enough self
-					discipline, passion, and training one can succed at whatever they put their energy towards. I found great interest in coding and design and the creativity and freedom that comes with it. I felt these would only compliment my other
-					interests. With COVID surge and the booming bootcamp market it was a great time to learn the skills so I enrolled in corses and bootcamps and I took off from there!</p>
-					<div class="reach-out">
-						<p>Intrested in working on something together? <br>Please <a href="#contact">reach out</a>!</p>
+				<p>&emsp;&emsp;Originally I took the traditional college route and studied liberal arts. During my freetime I loved (still do) cooking and making music. For work my partner, <a href="https://lnkd.in/gC2hgpk">Colin</a>, and I dogsat and really
+					enjoyed doing so.
+					Once I was near finishing my generals and it was time for me to declare a major I felt I wasn't any closer to finding a passion I could have a career from~ and lets be honest, wouldn't set me back <i>at least</i> a few
+					grand in debt. After much consideration I decided I needed to take a step back, truly discover myself and how I wanted to make my mark. Being native to Brazil, someone who thrives in
+					warmer weather, and living in the midwest just about all my life I was sick of the cold and figured my life in the sun no longer needed to wait. <br>
+					&emsp;&emsp;With this I decided to move to the south and planned to establish residency then attend college. Colin, our now 1 y-o white german shepherd-wolf, and I road-tripped for a couple months and
+					experienced things I feel we wouldn't have with the close-to-home college life. I learned to connect with myself and the world around me. <br>
+					&emsp;&emsp;Eventually we settled down with mini roadtrips here and there, explored possible interests, and ran a small house and dog sitting buissness. One major issue with the south I feel the need to mention and that was impossible to
+					ignore, was how many strays there were~ it was heartbreaking. Everytime we'd go out there were a few we'd try to stop and help~ many days were spent this way. Most were scared due to peoples' past behaviours but Colin, our pup, and I did manage to help a few~ taking
+					roadtrips back up north to family members who could give them a good home. <br>
+					&emsp;While on 10hr+ road trips we'd dicover and listen to music, visit national parks, and read space and science articles~ like the works of Stephen Hawking, Einstein, Elon Musk and everything in between. I came to know just how important
+					spending everyday with the ones I love was to me. Ultimately, my interest in coding and design and the creativity and freedom that comes with it also came to light. I felt these would only compliment my other interests. I then recognized not everyone needs to take the college route. With enough self
+					discipline, passion, and training one can succed at whatever they put their energy towards. With COVID surge and the booming bootcamp market it was a great time to learn the skills. I researched and enrolled in courses and bootcamps, graduated, and took off from there!</p>
+
+				<div class="reach-out">
+					<p>Intrested in working on something together? <br>Please <a href="#contact">reach out</a>!</p>
+				</div>
+				<hr>
+				<div class="row-2">
+					<div class="column-2">
+						<img id="prom-us" src="images/promus.jpg" alt="us">
 					</div>
-					<hr>
-					<div class="row-2">
-						<div class="column-2">
-							<img id="prom-us" src="images/promus.jpg" alt="us">
-						</div>
-						<div class="column-2">
-							<img id="family" src="images/chianeymushla.jpg" alt="family">
-						</div>
-						<div class="column-2">
-							<img id="scuba-us" src="images/scubaus.jpg" alt="us-scuba">
-						</div>
+					<div class="column-2">
+						<img id="family" src="images/chianeymushla.jpg" alt="family">
 					</div>
-					<div class="reach-out">
-						<p>Colin and I have worked on many projects together and enjoy doing so. We are open to discuss individual or team work! Check out some of his work <a href="https://lnkd.in/gC2hgpk">here</a>!</p>
+					<div class="column-2">
+						<img id="scuba-us" src="images/scubaus.jpg" alt="us-scuba">
 					</div>
+				</div>
+				<div class="reach-out">
+					<p>Colin and I have worked on many projects together and enjoy doing so. We are open to discuss individual or team work! Check out some of his work <a href="https://lnkd.in/gC2hgpk">here</a>!</p>
+				</div>
 
 
 
-					<!-- <h3 class="major">Form</h3> -->
-					<!-- <form method="post" action="mailto:larissabfield@gmail.com" enctype="text/plain">
+				<!-- <h3 class="major">Form</h3> -->
+				<!-- <form method="post" action="mailto:larissabfield@gmail.com" enctype="text/plain">
 						<div class="fields">
 							<div class="field half"> -->
-					<!-- <label for="demo-name">Name</label> -->
-					<!-- <input type="text" name="name" value="" placeholder="Jane Doe" />
+				<!-- <label for="demo-name">Name</label> -->
+				<!-- <input type="text" name="name" value="" placeholder="Jane Doe" />
 							</div>
 							<div class="field half"> -->
-					<!-- <label for="demo-email">Email</label> -->
-					<!-- <input type="email" name="email" value="" placeholder="jane@untitled.tld" />
+				<!-- <label for="demo-email">Email</label> -->
+				<!-- <input type="email" name="email" value="" placeholder="jane@untitled.tld" />
 							</div>
 							<div class="field"> -->
-					<!-- <label for="demo-message">Message</label> -->
-					<!-- <textarea name="message"  placeholder="Enter your message" rows="6"></textarea>
+				<!-- <label for="demo-message">Message</label> -->
+				<!-- <textarea name="message"  placeholder="Enter your message" rows="6"></textarea>
 							</div> -->
-					<!-- <div class="field">
+				<!-- <div class="field">
 								<label for="demo-category">Category</label>
 								<select name="demo-category" id="demo-category">
 									<option value="">-</option>
@@ -279,16 +279,16 @@
 									<option value="1">Administration</option>
 									<option value="1">Human Resources</option>
 								</select> -->
-					<!-- </div> -->
-					<!-- <div class="field half">
+				<!-- </div> -->
+				<!-- <div class="field half">
 								<input type="radio" id="demo-priority-low" name="demo-priority" checked>
 								<label for="demo-priority-low">Low</label>
 							</div> -->
-					<!-- <div class="field half">
+				<!-- <div class="field half">
 								<input type="radio" id="demo-priority-high" name="demo-priority">
 								<label for="demo-priority-high">High</label>
 							</div> -->
-					<!-- <div class="field half">
+				<!-- <div class="field half">
 								<input type="checkbox" id="demo-copy" name="demo-copy">
 								<label for="demo-copy">Email me a copy</label>
 							</div>
@@ -296,15 +296,15 @@
 								<input type="checkbox" id="demo-human" name="demo-human" checked>
 								<label for="demo-human">Not a robot</label>
 							</div> -->
-					<!-- <div class="field">  COPY
+				<!-- <div class="field">  COPY
 								<label for="demo-message">Message</label>
 								<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
 							</div> -->
 
-					<!-- <ul class="actions">
+				<!-- <ul class="actions">
 							<li><input type="submit" value="Send Message" class="primary" /></li> -->
-					<!-- <li><input type="reset" value="Reset" /></li> -->
-					<!-- </ul>
+				<!-- <li><input type="reset" value="Reset" /></li> -->
+				<!-- </ul>
 					</form> -->
 
 			</article>
@@ -329,5 +329,6 @@
 	<script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
