--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 					<h3>Marshmello & Friends Co.</h3>
 					<p>A fully responsive website deigned for a small buisness that offers pet and house sitting services as well as sells baked goods. Clients can book dates and purchase pup treats online.</p>
 					<hr>
-					<h3><a href="https://github.com/larissabott/TacoParser">Tocobell Geolocater</a></h3>
-					<p>An exercise in geolocation, csv parsing, & logging where I used the Geolocater Nuget Package to calculate the furthest Toco Bell store locations.</p>
+					<h3><a href="https://github.com/larissabott/TacoParser">Tacobell Geolocater</a></h3>
+					<p>An exercise in geolocation, csv parsing, & logging where I used the Geolocater Nuget Package to calculate the furthest Taco Bell store locations.</p>
 					<hr>
 					<h3>Timer/Auyuverda App</h3>
 					<p>The current app selection for multiple timers at once is very sparce so I created this app with the intention of the app having this purpose with an asthetic design. The idea was the multiple timer would be used for meditation/stretching
 						as indicators however it is multipurpose. Currently adding featres that revolve around ayuverda:
-						recording exersize, sleep, water & food intake with feedback on how this corresponds with auyuverda's belief. Finding life and inner balce is the main goal.</p>
+						recording exersize, sleep, water & food intake with feedback on how this corresponds with auyuverda's belief. Finding life and inner balance is the main goal.</p>
 				</blockquote>
 				<hr>
 				<h4>edVcAtIoN</h4>
